--- a/css/style.css
+++ b/css/style.css
@@ -12158,14 +12158,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(1) {
   z-index: 10;
-  transform: rotate(3deg) translate(-50%, -50%);
+  transform: rotate(2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(1):before {
   content: "1";
 }
 .slyde:nth-child(1).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(3deg) translate(-50%, -15rem);
+  transform: rotate(2deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12180,14 +12180,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(2) {
   z-index: 9;
-  transform: rotate(0deg) translate(-50%, -50%);
+  transform: rotate(1deg) translate(-50%, -50%);
 }
 .slyde:nth-child(2):before {
   content: "2";
 }
 .slyde:nth-child(2).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(0deg) translate(-50%, -15rem);
+  transform: rotate(1deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12202,14 +12202,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(3) {
   z-index: 8;
-  transform: rotate(-1deg) translate(-50%, -50%);
+  transform: rotate(-4deg) translate(-50%, -50%);
 }
 .slyde:nth-child(3):before {
   content: "3";
 }
 .slyde:nth-child(3).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-1deg) translate(-50%, -15rem);
+  transform: rotate(-4deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12224,14 +12224,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(4) {
   z-index: 7;
-  transform: rotate(-1deg) translate(-50%, -50%);
+  transform: rotate(-3deg) translate(-50%, -50%);
 }
 .slyde:nth-child(4):before {
   content: "4";
 }
 .slyde:nth-child(4).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-1deg) translate(-50%, -15rem);
+  transform: rotate(-3deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12246,14 +12246,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(5) {
   z-index: 6;
-  transform: rotate(3deg) translate(-50%, -50%);
+  transform: rotate(2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(5):before {
   content: "5";
 }
 .slyde:nth-child(5).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(3deg) translate(-50%, -15rem);
+  transform: rotate(2deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12268,14 +12268,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(6) {
   z-index: 5;
-  transform: rotate(-3deg) translate(-50%, -50%);
+  transform: rotate(2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(6):before {
   content: "6";
 }
 .slyde:nth-child(6).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-3deg) translate(-50%, -15rem);
+  transform: rotate(2deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12312,14 +12312,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(8) {
   z-index: 3;
-  transform: rotate(-3deg) translate(-50%, -50%);
+  transform: rotate(0deg) translate(-50%, -50%);
 }
 .slyde:nth-child(8):before {
   content: "8";
 }
 .slyde:nth-child(8).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-3deg) translate(-50%, -15rem);
+  transform: rotate(0deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12334,14 +12334,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(9) {
   z-index: 2;
-  transform: rotate(3deg) translate(-50%, -50%);
+  transform: rotate(-1deg) translate(-50%, -50%);
 }
 .slyde:nth-child(9):before {
   content: "9";
 }
 .slyde:nth-child(9).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(3deg) translate(-50%, -15rem);
+  transform: rotate(-1deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12356,14 +12356,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(10) {
   z-index: 1;
-  transform: rotate(-1deg) translate(-50%, -50%);
+  transform: rotate(1deg) translate(-50%, -50%);
 }
 .slyde:nth-child(10):before {
   content: "10";
 }
 .slyde:nth-child(10).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-1deg) translate(-50%, -15rem);
+  transform: rotate(1deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -14029,6 +14029,15 @@ li.has-dropdown:hover .submenu li a {
   background-image: linear-gradient(to bottom, hsla(0, 0%, 0%, 0.6) 0%, hsla(0, 0%, 0%, 0.594) 2.7%, hsla(0, 0%, 0%, 0.576) 5.2%, hsla(0, 0%, 0%, 0.548) 7.7%, hsla(0, 0%, 0%, 0.512) 10.4%, hsla(0, 0%, 0%, 0.47) 13.5%, hsla(0, 0%, 0%, 0.424) 17.1%, hsla(0, 0%, 0%, 0.375) 21.3%, hsla(0, 0%, 0%, 0.325) 26.4%, hsla(0, 0%, 0%, 0.276) 32.5%, hsla(0, 0%, 0%, 0.23) 39.9%, hsla(0, 0%, 0%, 0.188) 48.5%, hsla(0, 0%, 0%, 0.152) 58.7%, hsla(0, 0%, 0%, 0.124) 70.6%, hsla(0, 0%, 0%, 0.106) 84.3%, hsla(0, 0%, 0%, 0.1) 100%);
 }
 .banner-subpage.contact-banner .title {
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.138);
+}
+.banner-subpage.meet-the-staff-banner {
+  background-image: url(../images/golfer-with-perspective.jpg);
+}
+.banner-subpage.meet-the-staff-banner .overlay {
+  background-image: linear-gradient(to bottom, hsla(0, 0%, 0%, 0.6) 0%, hsla(0, 0%, 0%, 0.594) 2.7%, hsla(0, 0%, 0%, 0.576) 5.2%, hsla(0, 0%, 0%, 0.548) 7.7%, hsla(0, 0%, 0%, 0.512) 10.4%, hsla(0, 0%, 0%, 0.47) 13.5%, hsla(0, 0%, 0%, 0.424) 17.1%, hsla(0, 0%, 0%, 0.375) 21.3%, hsla(0, 0%, 0%, 0.325) 26.4%, hsla(0, 0%, 0%, 0.276) 32.5%, hsla(0, 0%, 0%, 0.23) 39.9%, hsla(0, 0%, 0%, 0.188) 48.5%, hsla(0, 0%, 0%, 0.152) 58.7%, hsla(0, 0%, 0%, 0.124) 70.6%, hsla(0, 0%, 0%, 0.106) 84.3%, hsla(0, 0%, 0%, 0.1) 100%);
+}
+.banner-subpage.meet-the-staff-banner .title {
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.138);
 }
 @media only screen and (max-width: 767px) {
@@ -22240,6 +22249,25 @@ section.perks .container .row [class*=col] .single-solution-style-one:hover {
   background: #b4d9f6;
   width: 250px;
 }
+.sponsorship-cta#donation-request {
+  background: #f6f6f6;
+}
+.sponsorship-cta#donation-request .container p {
+  max-width: 800px;
+  margin: 0 auto;
+  padding-top: 2.25rem;
+  letter-spacing: 0.1px;
+  line-height: 150%;
+  font-size: 17px;
+  color: grey;
+}
+.sponsorship-cta#donation-request .container a.rts-btn {
+  margin-top: 3rem;
+  background: #e1e1e1;
+}
+.sponsorship-cta#donation-request .container a.rts-btn:after {
+  background: #d5d5d5;
+}
 
 .rates-page-body {
   padding-top: 17rem;
@@ -22628,9 +22656,9 @@ section.pro-shop-body.foot-joy .container .row .foot-joy-logo {
 }
 
 .instruction-page-body {
-  padding-top: 14rem;
+  padding-top: 17rem;
   padding-bottom: 18rem;
-  background: rgb(248, 248, 248);
+  background: #fafafa;
 }
 .instruction-page-body > .container {
   padding-bottom: 1rem;
@@ -22638,27 +22666,16 @@ section.pro-shop-body.foot-joy .container .row .foot-joy-logo {
 .instruction-page-body > .container hr {
   height: 1.25px;
 }
-.instruction-page-body > .container .pga-member-logo-box {
-  padding-right: 1rem;
-  padding-left: 3rem;
-  margin-left: -3rem;
-  margin-bottom: -2.5rem;
-  display: inline-block;
-  background: #f8f8f8;
-}
-.instruction-page-body > .container .pga-member-logo-box .pga-member-logo {
-  width: 90px;
-}
-.instruction-page-body > .container .pga-member-logo-box .pga-member-logo:after {
-  content: "";
-  width: 150px;
-}
 .instruction-page-body > .container .row.lined-row {
   border-top: 1.25px solid rgb(230, 230, 230);
   padding-top: 7rem;
 }
+.instruction-page-body > .container .row [class*=col] .pga-member-logo {
+  width: 80px;
+  height: auto;
+}
 .instruction-page-body > .container .row [class*=col] h3 {
-  padding-top: 3rem;
+  padding-top: 2rem;
   font-size: 37px;
 }
 .instruction-page-body > .container .row [class*=col] .shop-note {
@@ -22702,16 +22719,17 @@ section.pro-shop-body.foot-joy .container .row .foot-joy-logo {
   fill: var(--color-secondary);
 }
 .instruction-page-body .note-box .note-title {
-  font-family: "IKOB";
   font-size: 21px;
   padding-bottom: 0.5rem;
+  -webkit-text-stroke: 0.1px;
 }
 .instruction-page-body .note-box .price {
   color: rgb(139, 139, 139);
-}
-.instruction-page-body .note-box .price > span {
-  -webkit-text-stroke: 0.4px;
-  letter-spacing: 0.3px;
+  font-family: "Sono";
+  font-size: 14px;
+  text-transform: uppercase;
+  -webkit-text-stroke: 0.1px;
+  letter-spacing: 0.4px;
 }
 .instruction-page-body .note-box .img-box {
   background: white;
@@ -22732,6 +22750,7 @@ section.pro-shop-body.foot-joy .container .row .foot-joy-logo {
 
 .contact-page-body {
   padding-top: 5rem;
+  padding-bottom: 17rem;
 }
 .contact-page-body .rts-location-contact-area .container .row .single-location-area-contact .icon {
   display: inline-block;
@@ -22755,10 +22774,16 @@ section.pro-shop-body.foot-joy .container .row .foot-joy-logo {
   fill: var(--color-secondary);
 }
 .contact-page-body .rts-location-contact-area .container .row .single-location-area-contact .icon .injectable.phone {
-  width: 28px;
+  width: 29px;
+}
+.contact-page-body .rts-location-contact-area .container .row .single-location-area-contact .icon .injectable.envelope {
+  width: 25px;
 }
 .contact-page-body .rts-location-contact-area .container .row .single-location-area-contact p {
   font-family: "IKOB";
+  font-size: 21px;
+  -webkit-text-stroke: 0.3px;
+  letter-spacing: 0.2px;
   margin-bottom: 5px;
 }
 .contact-page-body .rts-location-contact-area .container .row .single-location-area-contact > span {
@@ -22767,6 +22792,9 @@ section.pro-shop-body.foot-joy .container .row .foot-joy-logo {
 }
 .contact-page-body .rts-location-contact-area .container .row .single-location-area-contact a {
   text-decoration: none;
+}
+.contact-page-body .rts-location-contact-area .container .row .single-location-area-contact a:hover, .contact-page-body .rts-location-contact-area .container .row .single-location-area-contact a:active, .contact-page-body .rts-location-contact-area .container .row .single-location-area-contact a:focus {
+  color: #262626;
 }
 .contact-page-body .rts-google-map-area .google-map-wrapper {
   max-height: 450px;
@@ -22783,6 +22811,120 @@ section.pro-shop-body.foot-joy .container .row .foot-joy-logo {
 }
 .contact-page-body .rts-google-map-area .directions-addendum p {
   color: grey;
+}
+
+.meet-the-staff-page-body {
+  padding-top: 12rem;
+  padding-bottom: 17rem;
+}
+.meet-the-staff-page-body .rts-location-contact-area .container .row .single-location-area-contact {
+  position: relative;
+}
+.meet-the-staff-page-body .rts-location-contact-area .container .row .single-location-area-contact .pga-memb-logo {
+  position: absolute;
+  width: 85px;
+  top: -2rem;
+  right: 5rem;
+  filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.04)) drop-shadow(0 2px 2px rgba(0, 0, 0, 0.05)) drop-shadow(0 4px 4px rgba(0, 0, 0, 0.06)) drop-shadow(0 8px 8px rgba(0, 0, 0, 0.07)) drop-shadow(0 16px 16px rgba(0, 0, 0, 0.08)) drop-shadow(0 32px 32px rgba(0, 0, 0, 0.09));
+}
+.meet-the-staff-page-body .rts-location-contact-area .container .row .single-location-area-contact .staff-photo {
+  width: 250px;
+  border-radius: 50%;
+  padding: 5px;
+  border: 2px solid rgb(239, 233, 215);
+  margin-bottom: 3.5rem;
+}
+.meet-the-staff-page-body .rts-location-contact-area .container .row .single-location-area-contact .staff-photo.george {
+  border-color: rgb(234, 234, 234);
+}
+.meet-the-staff-page-body .rts-location-contact-area .container .row .single-location-area-contact p {
+  font-family: "IKOB";
+  color: var(--color-primary);
+  font-size: 29px;
+  -webkit-text-stroke: 0.3px;
+  letter-spacing: 0.2px;
+  margin-bottom: 10px;
+}
+.meet-the-staff-page-body .rts-location-contact-area .container .row .single-location-area-contact .dividing-line {
+  margin: 0 auto;
+  height: 1px;
+  width: 100px;
+  background-color: #dcdcdc;
+  margin-top: 2rem;
+  margin-bottom: 1.25rem;
+}
+.meet-the-staff-page-body .rts-location-contact-area .container .row .single-location-area-contact .title {
+  color: var(--color-primary);
+  font-size: 21px;
+  -webkit-text-stroke: 0.3px;
+  letter-spacing: 0.2px;
+  line-height: 130%;
+}
+.meet-the-staff-page-body .rts-location-contact-area .container .row .single-location-area-contact .contact-details {
+  padding-top: 2rem;
+}
+.meet-the-staff-page-body .rts-location-contact-area .container .row .single-location-area-contact .contact-details a {
+  display: block;
+}
+.meet-the-staff-page-body .rts-location-contact-area .container .row .single-location-area-contact .contact-details a img {
+  margin-right: 15px;
+  width: 14px;
+}
+.meet-the-staff-page-body .rts-location-contact-area .container .row .single-location-area-contact > span {
+  display: inline-block;
+  line-height: 138%;
+}
+.meet-the-staff-page-body .rts-location-contact-area .container .row .single-location-area-contact a:hover, .meet-the-staff-page-body .rts-location-contact-area .container .row .single-location-area-contact a:active, .meet-the-staff-page-body .rts-location-contact-area .container .row .single-location-area-contact a:focus {
+  color: #262626;
+}
+
+.board {
+  background: #f7f7f7;
+  padding-bottom: 17rem;
+}
+.board .container .row {
+  border-top: 1.5px solid #ececec;
+  padding-top: 1rem;
+}
+.board .container .row h3 {
+  font-family: "IKOB";
+  font-size: 42px;
+  color: #262626;
+}
+.board .container .row ul {
+  margin-top: 1rem;
+  list-style-type: none;
+}
+.board .container .row ul li {
+  padding-left: 2.5rem;
+  padding-bottom: 1rem;
+  font-size: 19px;
+  letter-spacing: 0.5px;
+}
+.board .container .row ul li::marker {
+  color: rgb(218, 218, 218);
+}
+.board .container .row ul li:first-of-type {
+  margin-top: 0;
+}
+.board .container .row p {
+  margin-bottom: 2rem;
+}
+.board .container.chair-container {
+  margin-top: 14rem;
+}
+
+.join-the-team {
+  background: white;
+}
+.join-the-team .container .row .completed-applications {
+  color: grey;
+  padding-top: 2rem;
+  max-width: 500px;
+}
+.join-the-team .container .row .right-bit p {
+  font-size: 18px;
+  letter-spacing: 0.3px;
 }
 
 footer {
